# Vtrack

./: .gitignore  README.md  docker-compose.yml  package-lock.json
nginx/: default.conf
vtrack_api/: Dockerfile  README.md  pyproject.toml  tox.ini
vtrack_api/resources/: development.ini  production.ini  qa.ini  staging.ini
vtrack_api/src/: load_fixture.py  manage.py
vtrack_api/src/config/: admin.py  models.py  urls.py
vtrack_api/src/config/fixtures/: items.json
vtrack_api/src/config/migrations/: 0001_initial.py
vtrack_api/src/organization/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
vtrack_api/src/user/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
vtrack_api/src/user/fixtures/: addresses.json  countries.json  organizations.json  users.json
vtrack_api/src/user/migrations/: 0001_initial.py
vtrack_api/src/visitor/: admin.py  apps.py  choices.py  filters.py  helpers.py  managers.py  models.py  receivers.py  renderes.py  serializers.py  signals.py  urls.py  utilites.py  views.py
vtrack_api/src/visitor/fixtures/: categories.json  nid_types.json  purpose_of_visits.json
vtrack_api/src/visitor/migrations/: 0001_initial.py  0002_alter_visitordetail_options.py
vtrack_api/src/visitor/templates/: approval.html  otp.html  success.html
vtrack_api/src/vtrack/: asgi.py  settings.py  urls.py  wsgi.py
vtrack_native/: app.json  package.json
vtrack_native/android/: settings.gradle
vtrack_native/android/app/: build.gradle
vtrack_native/ios/: Podfile
vtrack_native/ios/vtrack_native/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
vtrack_native/ios/vtrack_native.xcodeproj/: project.pbxproj
vtrack_native/ios/vtrack_nativeTests/: vtrack_nativeTests.m
vtrack_webui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
vtrack_webui/public/: service-worker.js
vtrack_webui/src/: App.jsx  main.jsx
vtrack_webui/src/assets/: confetti.css  idcard.css  loader.css  main.css
vtrack_webui/src/components/: index.jsx  index.tsx
vtrack_webui/src/constants/: api.js  browser.js  index.js  index.tsx
vtrack_webui/src/features/: VisitorSlice.js  authSlice.js  index.js  resetSlice.js  userMediaSlice.js
vtrack_webui/src/hooks/: useAccessCard.js  useAuth.js  useCatergory.js  useWarnIfUnsavedChanges.js
vtrack_webui/src/layouts/: index.tsx
vtrack_webui/src/pages/: index.jsx  index.tsx  visitor-details.tsx
vtrack_webui/src/store/: store.js
vtrack_webui/src/utils/: ProtectedRoute.jsx
vtract_webui/: index.html  package-lock.json  package.json  tailwind.config.js
vtract_webui/public/: manifest.json  service-worker.js
vtract_webui/src/: App.jsx  main.jsx
vtract_webui/src/assets/: main.css
vtract_webui/src/components/: index.jsx
vtract_webui/src/constants/: api.js  browser.js  index.js
vtract_webui/src/features/: NidSlice.js  VisitorSlice.js  authSlice.js  index.js  userMediaSlice.js
vtract_webui/src/hooks/: index.js  useAuth.js  useNidtypes.js  useVisitor.js
(+72 files in other folders)
