[tool.poetry]
name = "vtrack-api"
version = "0.1.0"
description = ""
authors = ["Jai Jain <jai.jain@acsicorp.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
